--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,6 @@ aiogram==3.6.0
 replicate==0.24.0
 python-dotenv==1.0.1
 aiofiles==23.2.1
-aiohttp==3.9.5
-certifi==2024.8.30
+aiohttp==3.8.6
+pydantic==2.7.4
+pydantic-core==2.18.4
