--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
 aiogram==3.6.0
-replicate==0.24.0
 python-dotenv==1.0.1
 aiofiles==23.2.1
-aiohttp==3.9.5
-pydantic==2.7.4
-pydantic-core==2.18.4
+torch==2.1.2
+torchvision==0.16.2
+diffusers==0.27.2
+accelerate==0.29.3
+transformers==4.38.2
+safetensors==0.4.2
+Pillow==10.2.0
