--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,6 @@ diffusers==0.27.2
 accelerate==0.29.3
 transformers==4.38.2
 safetensors==0.4.2
-huggingface_hub==0.20.3  # ← обновлено
+huggingface_hub==0.20.3
 numpy==1.26.4
 python-dotenv
