--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,20 @@
-aiogram==3.6.0
-python-dotenv==1.0.1
-aiofiles==23.2.1
-Pillow==10.2.0
+--extra-index-url https://download.pytorch.org/whl/cpu
+
 torch==2.1.2
 torchvision==0.16.2
-diffusers==0.27.2
-accelerate==0.29.3
-transformers==4.38.2
-safetensors==0.4.2
-huggingface_hub==0.20.3
+torchaudio==2.1.2
+
 numpy==1.26.4
-python-dotenv
+diffusers==0.28.2
+transformers==4.38.2
+accelerate==0.29.3
+huggingface_hub==0.19.4
+safetensors==0.4.2
+
+Pillow>=9.5.0,<10.3.0
+opencv-python>=4.10.0,<4.12.0
+
+aiogram==3.6.0
+aiofiles>=23.0.0
+
+python-dotenv==1.0.1
